cmake_minimum_required(VERSION 3.0.0)
project(Top)

add_subdirectory("${CMAKE_SOURCE_DIR}/project/Week_00")
# project(main VERSION 0.1.0 LANGUAGES C CXX)

# include(CTest)
# enable_testing()

# add_library(main main.cpp)

# set(CPACK_PROJECT_NAME ${PROJECT_NAME})
# set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
# include(CPack)
