cmake_minimum_required(VERSION 3.0.0)

# Sub-Projects
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/00_01_recur")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/00_02_next_permutation")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/00_03_permutation_by_crvur")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/00_04_combi")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/00_05_split")