cmake_minimum_required(VERSION 3.0.0)

# Sub-Projects
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/02_01_2178")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/02_02_1012")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/02_03_2468")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/02_04_2583")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/02_05_1992")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/02_06_2828")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/02_07_2910")











