cmake_minimum_required(VERSION 3.0.0)

# Sub-Projects
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/00_001_inputOutput")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/00_002_type")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/00_003_Memory_Pointer")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/00_004_Function")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/00_005_DataStructure")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/00_006_DataStructure_custom")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/00_007_Call_By_Reference")